# multilingual-support-triage-engine

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: analytics.py  deps.py  tickets.py
backend/app/core/: config.py  logging.py
backend/app/domain/: models.py
backend/app/dto/: tickets.py
backend/app/infrastructure/: repositories.py
backend/app/services/: knowledge_base.py  ml_training.py  triage.py
backend/tests/: test_triage.py
docs/: system-design.md
frontend/: package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx
frontend/app/analytics/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/tickets/: page.tsx
frontend/app/tickets/[id]/: page.tsx
frontend/components/: metric-card.tsx  sidebar.tsx
frontend/lib/: sample-data.ts
