[project]
name = "multilingual-support-triage-engine-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.3",
  "email-validator>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "redis>=5.0",
  "langchain>=0.2",
  "langchain-openai>=0.1",
  "langsmith>=0.1",
  "sentence-transformers>=3.0",
  "chromadb>=0.5",
  "pypdf>=4.2",
  "scikit-learn>=1.5",
]
[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27", "ruff>=0.5"]
[tool.ruff]
line-length = 100
